<resources>
    <string name="app_name">Video2Video</string>
    <string name="title_get">Get</string>
    <string name="title_set">Set</string>
    <string name="title_me">Me</string>
    <string name="error">Error</string>
    <string name="line">Line</string>
    <string name="waitting">正在加载..</string>
    <string name="load_fail">加载失败T_T!</string>
    <string name="description">description</string>

    <string name="title_activity_player">PlayerActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="play">播放</string>

    <string name="fromMoblie">从手机选择</string>
    <string name="fromCamera">用相机拍摄</string>
    <string name="publish">发布</string>

    <string name="edit_name">名称</string>
    <string name="edit_description">描述</string>

</resources>
