<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".PublishActivity">

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/prefire_picture" />

    <Button
        android:id="@+id/btn_from_mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fromMoblie" />

    <Button
        android:id="@+id/btn_from_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fromCamera" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/in_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/in_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_description" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_publish"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/publish"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:theme="@style/AppTheme" />

</LinearLayout>